# TrinyxEngine

./: .clangd  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TrinyxDefaults.ini  imgui.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
DeterminismTest/: CMakeLists.txt  DeterminismTestDefaults.ini
DeterminismTest/content/: AssetDatabase.tnxdb  DeterminismFloor.tnxscene  DeterminismFloor.tnxscene.tnxid
DeterminismTest/src/: CubeEntity.cpp  CubeEntity.h  DeterminismMain.cpp  DeterminismMode.cpp  DeterminismMode.h  DeterminismState.h
Game/: CMakeLists.txt  GameDefaults.ini
Game/content/: AssetDatabase.tnxdb  Don_char.tnxmesh  Don_char.tnxmesh.tnxid  MeshProp.prefab.tnxid  PhysicsPlayground.tnxscene.tnxid  SuperCube.prefab.tnxid  TestScene.tnxscene  TestScene.tnxscene.tnxid
Game/src/: CubeEntity.cpp  CubeEntity.h  GameMain.cpp  MeshProp.h
Playground/: CMakeLists.txt  EditorDefaults.ini  PlaygroundDefaults.ini
Playground/content/: Arena.tnxscene  Arena.tnxscene.tnxid  AssetDatabase.tnxdb  DefaultCharacter.tnxprefab  DefaultCharacter.tnxprefab.tnxid  Don_char.tnxmesh.tnxid  MeshProp.prefab  PhysicsPlayground.tnxscene  StaticCube.prefab  StaticCube.prefab.tnxid  SuperCube.prefab  SuperCube.prefab.tnxid  TestScene.tnxscene.tnxid  Wall.prefab  Wall.prefab.tnxid
Playground/content/Audio/: firered_00A1.wav.tnxid
Playground/src/: ArenaMode.cpp  ArenaMode.h  CubeEntity.cpp  CubeEntity.h  GameplayState.h  MeshProp.h  PlayerConstruct.cpp  PlayerConstruct.h  PlaygroundMain.cpp  TriggerVolume.cpp  TriggerVolume.h
StrigidEngine/: CMakeLists.txt
Testbed/: CMakeLists.txt  TestbedDefaults.ini
Testbed/content/: AssetDatabase.tnxdb
Testbed/src/: Main.cpp
Testbed/src/Public/: AmbientProp.h  CubeEntity.cpp  CubeEntity.h  PhysicsEntity.h  PlayerConstruct.h  Projectile.h  TestEntity.cpp  TestEntity.h  TestFramework.h
Testbed/src/Tests/: Bitplane_TombstonedSkipped.cpp  Bitset_SetTestReset.cpp  Bitset_SignatureContains.cpp  Config_DefaultsValid.cpp  Config_FillFrom.cpp  Config_HeadlessFlag.cpp  Config_ZeroNetworkHz.cpp  Defrag_CompactsHoles.cpp  Defrag_SlabRecycled.cpp  Entity_DestroyUpdatesCount.cpp  Entity_MixedTypeArchetypes.cpp  FieldProxy_ScalarStoreLoad.cpp  FieldProxy_WideMaskStore.cpp  FieldProxy_WideStore.cpp  FlatMap_BasicOps.cpp  FlatMap_OrderPreserved.cpp  Jobs_DispatchVerified.cpp  Jobs_MultiDispatch.cpp  Jobs_WorkerCount.cpp  Net_InputFrameRouting.cpp  Net_LoopbackPingPong.cpp  Net_Loopback_Client.cpp  Net_Loopback_Server.cpp  Net_PlayerConstruct.cpp  Physics_BodyCountAfterSpawn.cpp  Physics_JoltInitialized.cpp  Registry_ArchetypeSignature.cpp  Registry_BatchCreate.cpp  Registry_ClassQuery.cpp  Registry_ComponentQuery.cpp  Registry_CreateEntities.cpp  Registry_DestroyAndReuse.cpp  Registry_EmptyComponentQuery.cpp  Registry_HasComponent.cpp  Registry_MultiDestroyReuse.cpp  Registry_StaleHandle.cpp  Registry_ValidEntityIDs.cpp  RingBuffer_FifoOrder.cpp  RingBuffer_Full.cpp  RingBuffer_PushPop.cpp  (+17 more)
Tools/: GenerateFixedTrigLUT.py
Trinyx/: CMakeLists.txt
docs/: ARCHITECTURE.md  AUDIO.md  BUILD_OPTIONS.md  CONFIGURATION.md  DATA_STRUCTURES.md  DEFRAGMENTATION.md  DETERMINISM.md  EDITOR_DEBUGGING.md  FLOW.md  GAMEFLOW.md  GPU_Driven_Rendering_Design.md  NETWORKING.md  PERFORMANCE_TARGETS.md  RENDERING_REFERENCES.md  SCHEMA_ERROR_EXAMPLES.md  STATUS.md  UI.md
libs/cgltf/: cgltf.h
shaders/: GpuFrameData.slang  cube.frag.slang  cube.frag.spv  cube.vert.slang  cube.vert.spv  predicate.slang  prefix_sum.slang  scatter.slang
shaders/common/: GpuFrameData.slang
shaders/compute/: build_draws.slang  build_draws.spv  predicate.slang  predicate.spv  prefix_sum.slang  prefix_sum.spv  scatter.slang  scatter.spv  scatter_pick.spv  sort_instances.slang  sort_instances.spv  sort_instances_pick.spv
shaders/graphics/: cube.frag.slang  cube.frag.spv  cube.frag_pick.spv  cube.vert.slang  cube.vert.spv  cube.vert_pick.spv
src/Editor/Private/: AssetDatabase.cpp  EditorContext.cpp  EditorRenderer.cpp  UndoCommand.cpp
src/Editor/Private/Panels/: ComponentGeneratorPanel.cpp  ContentBrowserPanel.cpp  DetailsPanel.cpp  EngineStatsPanel.cpp  LogPanel.cpp  NodeScriptPanel.cpp  WorldOutlinerPanel.cpp
src/Editor/Public/: AssetDatabase.h  EditorContext.h  EditorPanel.h  EditorState.h  UndoCommand.h  WorldViewport.h
src/Editor/Public/Panels/: ComponentGeneratorPanel.h  ContentBrowserPanel.h  DetailsPanel.h  EngineStatsPanel.h  LogPanel.h  NodeScriptPanel.h  WorldOutlinerPanel.h
src/Runtime/Assets/Private/: MeshAsset.cpp  MeshImporter.cpp  MeshManager.cpp
src/Runtime/Assets/Public/: AssetRegistry.h  MeshAsset.h  MeshImporter.h  MeshManager.h  VertexFormat.h
src/Runtime/Audio/Private/: AudioAsset.cpp  AudioInternal.h  AudioManager.cpp
src/Runtime/Audio/Public/: Audio.h  AudioAsset.h  AudioHandle.h  AudioManager.h
src/Runtime/Camera/Private/: CameraManager.cpp
src/Runtime/Camera/Public/: CameraInputMix.h  CameraManager.h
src/Runtime/Components/Public/: BoundingVolume.h  CCameraLayer.h  CColor.h  CForces.h  CJoltBody.h  CMeshRef.h  CNodeTransform.h  CRigidBody.h  CRotation.h  CScale.h  CShape.h  CSpawnInfo.h  CTransform.h  CTranslation.h  CVelocity.h  CVisualTransform.h  CVolume.h  CacheSlotMeta.h  ColorData.h  Forces.h  JoltBody.h  MeshRef.h  RigidBody.h  Rotation.h  Scale.h  ShapeData.h  TemporalFlags.h  TransRot.h  Transform.h  Translation.h  Velocity.h
src/Runtime/Construct/Private/: PlayerConstruct.cpp
src/Runtime/Construct/Public/: Body.h  CameraConstruct.h  Construct.h  ConstructBatch.h  ConstructRegistry.h  ConstructView.h  DefaultView.h  LogicView.h  Owned.h  PhysView.h  PlayerConstruct.h  RenderView.h  Soul.h  TickGroup.h
src/Runtime/Containers/Public/: FixedBitset.h  FlatMap.h  TrinyxMPMCRing.h  TrinyxMPSCRing.h  TrinyxRingBase.h  TrinyxSPMCRing.h
src/Runtime/Core/Private/: EngineConfig.cpp  EntityBuilder.cpp  Json.cpp  LogicThread.cpp  ReflectionRegistry.cpp  RollbackSim.cpp  StrigidEngine.cpp  ThreadPinning.cpp  ThreadPinning.h  TrinyxEngine.cpp  TrinyxJobs.cpp  World.cpp
(+172 files in other folders)
